data/style.css
/* ... */
div.mainbox.discussions b.boards a { color: $grayedout$; }
div.discussions td.tc2             { width: 50px;  }
div.discussions td.tc3             { width: 100px;  }
div.discussions td.tc4             { width: 210px; }
div.discussions .pollflag          { color: $grayedout$; padding-right: 6px; }
div.postsearch td.tc1_1           { width: 60px; padding-left: 0; padding-right: 0; text-align: right }
div.postsearch td.tc1_2           { width: 25px; padding-left: 0 }
div.postsearch td.tc2             { width: 65px;  }
div.postsearch td.tc3             { width: 90px; }
h1.boxtitle, h1.boxtitle a {
  font-family: "Futura", "Century New Gothic", "Arial", Serif;
  font-weight: bold;
  font-style: italic;
  color: $grayedout$;
  font-size: 17px;
  margin: 20px 0 -20px 0;
}




/***** VN page *******/

#nsfw_chk:checked ~ *                    { cursor: pointer; }
#nsfw_chk:checked ~ * > #nsfw_show       { display: none; }
#nsfw_chk:not(:checked) ~ * > #nsfw_hid  { display: none; }

#nsfwhide_chk:checked ~ * #nsfwshown   { display: none; }
#nsfwhide_chk:not(:checked) ~ * .nsfw  { display: none; }

div.vndetails                 { margin: 0 auto; max-width: 820px; }
div.vnimg                     { float: left; width: 250px; margin: 0 10px; }
div.vnimg i                   { display: block; width: 100%; text-align: center; font-size: 11px; }
div.vnimg p                   { text-align: center; padding: 0px; margin: 0; }
.vndesc h2                    { margin: 5px 0 0 0; }
.vndesc p                     { padding: 0 0 0 5px; }
p#nsfw_hid                    { display: block; cursor: pointer; }
div.vndetails table           { float: left; width: 500px; }
div.vndetails table td.key    { width: 90px; }
div.vndetails table dt        { float: left; font-style: italic; }
div.vndetails table dd        { margin-left: 90px; }
div.vndetails td.relations dt { float: none; font-style: normal; }
div.vndetails td.relations dd { margin-left: 15px; }
div.vndetails td.anime b      { font-size: 10px; font-weight: normal; padding-right: 4px; }

div#vntags                    { margin: 0 30px 0 30px; border-top: 1px solid $border$; padding: 1px 5% 0 5%; text-align: center; }
#vntags span                  { white-space: nowrap; margin-left: 15px; }
#vntags b                     { color: $grayedout$; font-weight: normal; font-size: 10px }
#tagops                       { text-align: right; width: auto; }

#tagops label                 { margin: 0 0 0 10px;  border: 0; outline: none; color: $link$; cursor: pointer; }
#tagops label.sec             { border-left: 1px solid $border$; padding-left: 10px }
#tagops label.lst             { margin: 0 30px 0 10px; }
#tagops input:checked + label { color: $maintext$; }

/* tag filter machinery; the order of declarations is important */

#tag_spoil_all:checked ~ #vntags .cut2 { display: none; }
#tag_spoil_some:checked ~ #vntags .cut1 { display: none; }
#tag_spoil_none:checked ~ #vntags .cut0 { display: none; }

#tag_toggle_all:checked ~ #vntags .cut { display: inline }

#cat_cont:not(:checked) ~ #vntags .cat_cont { display: none; }
#cat_tech:not(:checked) ~ #vntags .cat_tech { display: none; }
#cat_ero:not(:checked) ~ #vntags .cat_ero   { display: none; }

#tag_spoil_none:checked ~ #vntags .tagspl1  { display: none; }
#tag_spoil_none:checked ~ #vntags .tagspl2  { display: none; }
#tag_spoil_some:checked ~ #vntags .tagspl2  { display: none; }

/* end of tag filter machinery */

.releases table,
#screenshots table     { width: 100%; }
.releases tr.lang td,
#screenshots tr.rel td { background: $boxbg$; font-weight: bold; }
.releases td.tc1       { padding-left: 30px; width: 80px; }
.releases td.tc2       { text-align: center; width: 50px; }
.releases td.tc3       { text-align: right; padding: 0; width: 90px; }
.releases td.tc_icons  { padding: 0 4px }
.releases td.tc5       { width: 70px; }
.releases td.tc5 a     { color: $maintext$; border: 0; }
.releases td.tc6       { text-align: right; width: 25px; padding: 0; }

.rllinks_dd a { text-align: right; padding: 3px }
.rllinks_dd span { color: $maintext$; padding-right: 10px }

#screenshots p.rel {
  background: $boxbg$;
  margin: 0;
  padding: 2px;
  font-weight: bold;
  text-align: center;
}
#screenshots a.scrlnk     { margin: 2px; border: none }
#screenshots div.scr      { display: block; padding-left: 30px; text-align: center }
#screenshots img          { border: 3px solid transparent; }
#screenshots a.nsfw img   { border: 3px solid $statnok$; }
#screenshots a:hover img  { border: 3px solid $border$; }
#screenshots #nsfwshown   { font-style: normal }
#screenshots p.nsfwtoggle { float: right; margin: 0; }

.summarize_more {
  margin-top: 9px; margin-bottom: -10px; padding: 0; height: 15px;
  border: 1px solid $border$; border-top: none;
  background: $boxbg$;
  text-align: center
}



/***** Vote stats ****/

.votestats           { width: 630px; margin: 0 auto; }
.votegraph           { float: left; margin-right: 20px }
.votegraph td        { padding: 0 2px; }
.votegraph td.number { text-align: right }
.votegraph td div    { float: left; height: 14px; background-color: $border$; margin-right: 2px; padding: 0; }
.votestats thead td  { background: transparent; text-align: center; padding: 2px; }
.votestats tfoot td  { text-align: right }
.votestats div       { text-align: center; padding-top: 5px; }

.recentvotes               { width: 300px }
.recentvotes thead tr td b { font-weight: normal; padding-left: 5px }



/***** Polls ****/

.votebooth thead td   { font-weight: normal; background: transparent; padding-bottom: 5px; }
.votebooth tfoot td   { padding-top: 5px }
.votebooth td         { vertical-align: middle; padding: 0 8px; }
.votebooth            { margin: 0 30px }
.votebooth td.tc1     { padding-right: 20px }
.votebooth td.tc2     { min-width: 220px }
.votebooth td.tc2 div { margin: 2px; }
.votebooth td.tc2 div.graph { float: left; height: 14px; background-color: $border$; padding: 0; }
/* ... */

